<resources>
    <string name="app_name">Ma réu</string>
    <string name="meeting_circle">Meeting Circle</string>
    <string name="add_button">add button</string>
    <string name="filter_button">Filter button</string>
    <string name="delete_button">Delete button</string>
    <string name="place">Place</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="participants">Participants</string>
    <string name="meeting">%1$s - %2$s - %3$s</string>
    <string name="hour_picker">%1$sh%2$s</string>
    <string name="date_picker">%1$s/%2$s/%3$d</string>
    <string name="add">Add</string>
    <string name="email_address_error">Error email is not a valid email address</string>
    <string name="list_is_empty">Error, there is no participant in the meeting</string>
    <string name="subject_is_empty">Error, there is no subject in the meeting</string>
    <string name="room">Salle</string>
    <string name="filter">Filter</string>
    <string name="cancel">Reset</string>
    <string name="room_a">Salle A</string>
    <string name="room_b">Salle B</string>
    <string name="room_c">Salle C</string>
    <string name="room_d">Salle D</string>
    <string name="room_e">Salle E</string>
    <string name="room_f">Salle F</string>
    <string name="room_g">Salle G</string>
    <string name="room_h">Salle H</string>
    <string name="room_i">Salle I</string>
    <string name="room_j">Salle J</string>
    <string name="dateFilter">dateFilter</string>
    <string name="roomFilter">roomFilter</string>
    <string-array name="room_array">
        <item>@string/room_a</item>
        <item>@string/room_b</item>
        <item>@string/room_c</item>
        <item>@string/room_d</item>
        <item>@string/room_e</item>
        <item>@string/room_f</item>
        <item>@string/room_g</item>
        <item>@string/room_h</item>
        <item>@string/room_i</item>
        <item>@string/room_j</item>
    </string-array>
</resources>