<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.add.AddMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.add.AddMeetingActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatarImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_blank_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roomInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/field_padding_top"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/avatarImage">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/roomSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hourInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/field_top_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/roomInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/hour" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/field_top_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/hourInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subjectInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/field_top_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/dateInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subjectEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participantsLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/field_top_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintEnd_toStartOf="@id/addParticipantButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subjectInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participantsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/participants"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addParticipantButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_padding_top"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/participantsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subjectInput" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/participantsChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/chip_group_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participantsLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_padding_top"
            android:text="@string/save"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participantsChipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
